Trying to fix the Timeout Problem